Fix extra padding.

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -11,7 +11,7 @@
 
 .heading h1 {
   margin: 0;
-  padding-top: 8px;
+  padding: 0;
   text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
 }
 
